[tool.poetry]
name = "urlprint"
version = "0.1.0"
description = ""
authors = ["eneyi <ruth.ikwu@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pymongo = "^4.6"
pydantic = "^2.6.3"
pydantic-settings = "^2.2.1"
numpy = "^1.26.4"
statsmodels = "^0.14.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
